--- a/overlay/frameworks/base/core/res/res/values/arrays.xml
+++ b/overlay/frameworks/base/core/res/res/values/arrays.xml
@@ -24,7 +24,7 @@
         <item>@string/reboot_reboot</item>
         <item>@string/reboot_recovery</item>
 		<item>@string/reboot_fastboot</item>
-        <item>@string/reboot_apx</item>
+        <!--<item>@string/reboot_apx</item>-->
     </array>
 
     <!-- Do not translate. Defines the shutdown actions passed to the kernel.
@@ -33,7 +33,7 @@
         <item></item>
         <item>recovery</item>
 		<item>bootloader</item>
-        <item>apx</item>
+        <!--<item>apx</item>-->
     </string-array>
 
 </resources>
