--- a/AutoParts/res/xml/preferences_dock.xml
+++ b/AutoParts/res/xml/preferences_dock.xml
@@ -16,16 +16,24 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ListPreference android:key="cpu_settings"
-        android:title="@string/cpu_mode_title"
-        android:summary="@string/cpu_settings_summary"
-        android:entries="@array/cpu_settings_array"
-        android:entryValues="@array/cpu_settings_array_values"
-        android:defaultValue="1" /> <!-- Balanced -->
+    <PreferenceCategory
+        android:key="dock_power"
+        android:title="@string/dock_power_title">
 
-    <CheckBoxPreference android:key="cpu_set_on_boot"
-        android:title="@string/cpu_set_on_boot_title"
-        android:summary="@string/cpu_set_on_boot_summary"
-        android:defaultValue="false"  />
+      <CheckBoxPreference android:key="dock_ec_wakeup"
+          android:title="@string/dock_ec_wakeup"
+          android:defaultValue="false"  />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="dock_notifications"
+        android:title="@string/dock_kp_notifications_title">
+
+      <CheckBoxPreference android:key="dock_kp_notifications"
+          android:title="@string/dock_kp_notifications"
+          android:defaultValue="false"  />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
