--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -20,12 +20,17 @@
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds.  Do not translate. -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- The attenuation in dB applied to the sound effects played
-         through AudioManager.playSoundEffect() when no volume is specified. -->
-    <integer name="config_soundEffectVolumeDb">0</integer>
+    <string name="config_datause_iface" translatable="false">wlan0</string>
 
-    <!-- The attenuation in dB applied to the lock/unlock sounds. -->
-    <integer name="config_lockSoundVolumeDb">0</integer>
+    <!-- Battery is accessible without removing battery. -->
+    <bool name="config_batterySdCardAccessibility">true</bool>
+
+    <bool name="config_allowAllRotations">true</bool>
+
+    <string-array name="config_locationProviderPackageNames" translatable="false">
+    <item>com.android.location.fused</item>
+    <item>com.google.android.location</item>
+    </string-array>
 
     <!-- This string array should be overridden by the device to present a list of network
          attributes.  This is used by the connectivity manager to decide which networks can coexist
@@ -37,11 +42,10 @@
          does not require auto-restore. -->
     <!-- the 6th element indicates boot-time dependency-met value. -->
     <string-array translatable="false" name="networkAttributes">
-        <item>"wifi,1,1,3,-1,true"</item>
-        <item>"bluetooth,7,7,2,-1,true"</item>
-        <item>"ethernet,9,9,4,-1,true"</item>
-        <item>"bt_dun,14,14,2,-1,true"</item>
+        <item>"wifi,1,1,2,-1,true"</item>
+        <item>"bluetooth,7,7,0,-1,true"</item>
         <item>"wifi_p2p,13,1,0,-1,true"</item>
+        <item>"ethernet,9,9,9,-1,true"</item>
     </string-array>
 
     <!-- This string array should be overridden by the device to present a list of radio
@@ -66,7 +70,7 @@
          bluetooth interfaces.  If the device doesn't want to support tethering over bluetooth this
          should be empty. -->
     <string-array translatable="false" name="config_tether_bluetooth_regexs">
-        <item>"bnep\\d"</item>
+        <item>"bt-pan"</item>
     </string-array>
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
@@ -86,16 +90,14 @@
         <item>7</item>
     </integer-array>
 
-    <string-array name="config_locationProviderPackageNames" translatable="false">
-        <item>com.android.location.fused</item>
-        <item>com.google.android.location</item>
-    </string-array>
-
     <!-- Boolean indicating whether the wifi chipset supports background scanning mechanism.
          This mechanism allows the host to remain in suspend state and the dongle to actively
          scan and wake the host when a configured SSID is detected by the dongle. This chipset
          capability can provide power savings when wifi needs to be always kept on. -->
     <bool translatable="false" name="config_wifi_background_scan_support">true</bool>
+
+    <!-- Boolean indicating whether the wifi chipset has p2p support -->
+    <bool translatable="false" name="config_wifi_p2p_support">true</bool>
 
     <!-- Flag indicating whether the we should enable the automatic brightness in Settings.
          Software implementation will be used if config_hardware_auto_brightness_available is not set -->
@@ -271,11 +273,14 @@
          movement threshold where scrolling should begin. -->
     <dimen name="config_viewConfigurationTouchSlop">12dp</dimen>
 
-    <!-- Path to the library that contains a device specific key handler -->
-    <string name="config_deviceKeyHandlerLib" translatable="false">/system/framework/com.cyanogenmod.asusdec.jar</string>
+    <string name="config_deviceHandlersLib" translatable="false">
+        /system/framework/com.cyanogenmod.asusdec.jar</string>
 
-    <!-- Name of that key handler class -->
-    <string name="config_deviceKeyHandlerClass" translatable="false">com.cyanogenmod.asusdec.KeyHandler</string>
+    <string name="config_deviceDockBatteryHandlerClass" translatable="false">
+        com.cyanogenmod.asusdec.DockBatteryHandler</string>
+
+    <string name="config_deviceKeyHandlerClass" translatable="false">
+        com.cyanogenmod.asusdec.KeyHandler</string>
 
     <!-- Asus dock compatibility disabled by default -->
     <bool name="config_hasDockBattery">true</bool>
