--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -39,8 +39,8 @@
     <string-array translatable="false" name="networkAttributes">
         <item>"wifi,1,1,2,-1,true"</item>
         <item>"bluetooth,7,7,0,-1,true"</item>
-        <item>"wifi_p2p,13,1,0,-1,true"</item>
-        <item>"ethernet,9,9,9,-1,true"</item>
+        <!--<item>"wifi_p2p,13,1,0,-1,true"</item>
+        <item>"ethernet,9,9,9,-1,true"</item> -->
     </string-array>
 
     <!-- This string array should be overridden by the device to present a list of radio
@@ -51,7 +51,7 @@
     <string-array translatable="false" name="radioAttributes">
         <item>"1,1"</item>
         <item>"7,1"</item>
-        <item>"9,1"</item>
+        <!--<item>"9,1"</item>-->
     </string-array>
 
     <!-- Array of ConnectivityManager.TYPE_xxxx values allowable for tethering -->
