Now Lightbulb should work properly
Change-Id: I15cfe74d37587e755fe53201a6aec43d18c0faf8

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -293,4 +293,7 @@
 
     <!-- Indicate whether the SD card is accessible without removing the battery. -->
     <bool name="config_batterySdCardAccessibility">true</bool>
+
+    <!-- Camera flash -->
+    <bool name="config_device_has_camera_flash">true</bool>
 </resources>
